<resources>
    <string name="app_name"> LoginTest </string>
    <string name="loading">loading</string>
    <string name="signed_out">signed_out</string>
    <string name="signed_in_fmt">LoginTest</string>
    <string name="title_activity_temp_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_second">SecondActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="my_calendar">My Calendar</string>
    <string name="group_calendar">Group Calendar</string>
    <string name="setting">Setting</string>
    <string name="information">Information</string>
    <string name="share">Share</string>
    <string name="android_studio">Android Studio</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_group__calendar_">Group_Calendar_Activity</string>
    <string name="title_activity_my__calendar_">My_Calendar_Activity</string>
    <string name="Home">Home</string>
    <string name="Setting">Setting</string>
    <string name="My_calendar">My Calendar</string>
    <string name="Group_calendar">Group Calendar</string>
    <string name="logout">Logout</string>
    <string name="schedule">Schedule</string>


</resources>