<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_my_calendar"
            android:icon="@mipmap/ic_my_calendar"
            android:title="@string/my_calendar" />
        <item
            android:id="@+id/nav_group_calendar"
            android:icon="@mipmap/ic_team_calendar"
            android:title="Team Calendar" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/setting" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_informatiom"
                android:icon="@mipmap/ic_information"
                android:title="@string/information" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@mipmap/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>